test/files/neg/locally-x.check
locally-x.scala:8: warning: naming parameter x is deprecated.
    x = 27
      ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
